--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ PORT = 3001
 MONGO_URI = mongodb+srv://Shubhangi30:Shubhi%4030@testdb.242je8e.mongodb.net/
 
 JWT_SECRET = secret@jwt-token
+
+EMAIL_HOST = sandbox.smtp.mailtrap.io
+EMAIL_PORT = 2525
+
+EMAIL_USERNAME = 229fb8d40b332e
+EMAIL_PASSWORD = c10a9c4760c209
