--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run serve",
     "start": "node server.js",
     "serve": "nodemon server.js",
-    "serve:prod": "SET NODE_ENV=production && nodemon server.js",
+    "serve:prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "",
@@ -21,16 +21,21 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.2",
+    "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.10",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.0.3",
     "require": "^2.4.20",
     "slugify": "^1.6.6",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "ndb": "^1.1.5"
